--- a/sass/_team-section.scss
+++ b/sass/_team-section.scss
@@ -107,12 +107,17 @@
     }
 
     &__person-info {
-        @media only screen and (max-width: 600px) {
+        @media only screen and (min-width: 401px) and (max-width: 600px) {
             display: flex;
             justify-content: center;
             flex-direction: column;
             margin-left: 5%;
             text-align: left;
+        }
+        
+        @media only screen and (max-width: 400px) {
+            margin-top: 15px;
+            text-align: center;
         }
     }
 
